# pinball-rt

./: .readthedocs.yaml  README.md  README.rst  dustkappa_yso.inp  pyproject.toml  test.py
.github/workflows/: publish_to_pypi.yml  run_E2E_tests.yml
docs/: conf.py  dust.rst  dustcreation.rst  gas.rst  grids.rst  index.rst  installation.rst  model.rst  requirements.txt  running.rst  sources.rst
examples/: dust-demo-diana.ipynb  dust-demo-diana_wice.ipynb  dust-demo.ipynb  dust-demo.mlstep.ipynb  pinball-demo.ipynb  run_Cartesian.py
include/: camera.h  dust.h  gas.h  grid.h  misc.h  photon.h  pinballrt.h  source.h  star.h
pinball/: camera.py  dust.py  grids.py  model.py  photons.py  sources.py  utils.py
pinball/tests/: test_E2E.py
pinball/tests/data/: UniformCartesian_E2E_image.nc  UniformCartesian_E2E_scattering.npz
pinballrt/: camera.py  dust.py  gas.py  grids.py  model.py  photons.py  sources.py  utils.py
pinballrt/model_components/: CompoundModel.py  Disk.py  Envelope.py  Fittable_Model.py
pinballrt/tests/: generate_dust.py  test_E2E.py  test_dust_creation.py  test_grids.py
pinballrt/tests/data/: LogUniformSphericalGrid_E2E_image.nc  LogUniformSphericalGrid_E2E_mom0.nc  LogUniformSphericalGrid_E2E_scattering.npz  LogUniformSphericalGrid_E2E_temperature.npz  UniformCartesianGrid_E2E_image.nc  UniformCartesianGrid_E2E_mom0.nc  UniformCartesianGrid_E2E_scattering.npz  UniformCartesianGrid_E2E_temperature.npz  UniformSphericalGrid_E2E_image.nc  amax.dst  (+10 more)
src/: camera.cc  dust.cc  gas.cc  grid.cc  misc.cc  pinballrt.cc  star.cc
test/: generate_dust.py  test.py  yso.dst
