[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pinball-rt"
version = "0.1.0"
authors = [
  { name="Patrick Sheehan", email="psheehan@nrao.edu" },
]
description = "GPU and ML supported Monte Carlo radiative transfer"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "astropy",
  "numpy",
  "warp-lang",
  "torch",
  "pytorch-lightning",
  "scipy",
  "tqdm",
  "xarray",
  "PyMieScatt @ git+https://github.com/bsumlin/PyMieScatt.git",
  "schwimmbad",
  "requests",
]

[project.optional-dependencies]
test = ["pytest","pytest-xdist","submitit"]
docs = ["sphinx","sphinx-automodapi","sphinx_book_theme","numpydoc"]

[project.urls]
Homepage = "https://github.com/psheenan/pinball-warp"
Issues = "https://github.com/psheehan/pinball-warp/issues"
